fix most sonarlint
fix most sonarlint